added host in settings

--- a/settings/settings.json
+++ b/settings/settings.json
@@ -1,4 +1,5 @@
 {
     "redirectUrl": "#",
+    "host": "https://github.com/wawakonso/push/",
     "apiEndpoint": "https://guarded-brook-83933.herokuapp.com/subscribe"
 }
